@@ -1,3 +1,8 @@
+2010-02-10  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
+
+	* bookmark.el (bookmark-handle-bookmark): Catch the right error.
+	(bookmark-default-handler): Accept new bookmark field `buffer'.
+
 2010-02-10  Chong Yidong  <cyd@stupidchicken.com>
 
 	* iswitchb.el (iswitchb-completions): Revert last change.
